# trading

./: .gitignore  README.md  pyproject.toml
src/hermes/: context.py  main.py
src/hermes/options/: utils.py
src/hermes/session/: alpaca.py  main.py
src/hermes/trading/: order_entry.py  risk_manager.py
src/oec/: main.py  order_entry.py  positions.py  risk_manager.py
src/trading_analytics/db/: db.py  setup.py
src/trading_analytics/processes/: log_account_info.py  log_executions.py  log_watchlists.py  watchlist.json
src/trading_analytics/trading_analytics_dbt/: dbt_project.yml
src/trading_analytics/trading_analytics_dbt/models/: avg_performance_month.sql  avg_performance_week.sql  daily_performance.sql  focus_list.sql  gappers.sql  monthly_performance.sql  nr_of_trades.sql  pets.sql  schema.yml  trades_view.sql  weekly_performance.sql
src/trading_order_entries/: context.py  main.py
src/trading_order_entries/session/: alpaca.py  main.py
src/trading_order_entries/trading/orders/: main.py
tests/: test_price_delta.py
tests/order_entry/: test_set_qty.py  test_validate_orders.py
tests/risk_manager/: test_price_delta.py  test_risk_amount.py  test_take_profit.py
